@@ -14,6 +14,7 @@
   - GEOMS: renamed all site_name variables to location_name
   - GEOMS FTIR H2CO: fixed issue in determining unit for H2O data (that would
     fail the ingestion)
+  - S5P L2 CO: added co=corrected ingestion option
 
 1.12 2020-10-29
 ~~~~~~~~~~~~~~~
